# vault-ai-os

./: .gitignore  .gitleaksignore  AIRGAP-STRATEGY.md  NEXT-STEPS.md  README-GCP.md  README.md  SSH-SETUP-GUIDE.md  vault-epic-quarantine.md
ansible/: ansible.cfg
config/: dnsmasq-pxe.conf
docs/: ARCHITECTURE-SUMMARY.md  EPIC-1A-COMPREHENSIVE-REVIEW.md  RUNPOD-TESTING.md  Vault_AI_Product_Blueprint_v3.0.docx  epic-1-assessment-summary.md  epic-1-golden-image-automation.md  epic-1a-demo-box.md  epic-1a-review-findings.md  epic-1b-production-hardening.md  gcp-app-validation-report.md  gcp-gpu-test-run-plan.md  gpu-deploy-runbook.md  hardware-specification-clarifications.md
packer/: AUTOINSTALL-VALIDATION.md  DIAGNOSIS-AND-FIXES.md  Makefile  TROUBLESHOOTING.md  debug-build.sh  manifest.json  run-first-build.sh  run-fixed-build.sh  ubuntu-22.04-demo-box.pkr.hcl
scripts/: VIRTUALBOX-FULL-TEST-GUIDE.md  VIRTUALBOX-TESTING-GUIDE.md  build-baremetal.sh  build-via-virtualbox.sh  check-gcp-quotas.sh  cleanup-gcp-resources.sh  create-autoinstall-iso.sh  install-desktop-offline.sh  launch-gcp-gpu-test.sh  monitor.sh  quick-test.sh  setup-gcp.sh  setup-pxe-server.sh  setup-ssh.sh  test-autoinstall-iso.sh  test-baremetal-image.sh  test-lan-reachability.sh  test-pytorch-ddp.py  test-ssh-connectivity.sh  test-tensorflow-multigpu.py  test-tensorflow-ngc.sh  test-vllm-api.sh  test-vllm-inference.py  validate-all.sh  (+1 more)
tools/qemu-mcp/: README.md  pyproject.toml
tools/qemu-mcp/qemu_mcp/: __init__.py  qemu_img.py  qemu_system.py  server.py
tools/qemu-mcp/tests/: test_qemu_mcp.py
(+179 files in other folders)
