[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qemu-mcp"
version = "0.1.0"
description = "MCP server for QEMU operations - disk image management and VM control"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Vault AI Systems" }
]
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
qemu-mcp = "qemu_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["qemu_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
